--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "trailingComma": "none"
   },
   "devDependencies": {
+    "eslint": "^9",
+    "eslint-config-next": "15.2.0",
     "husky": "^9.1.7",
     "tsx": "^4.19.3"
   }
