--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "migrate": "tsx lib/migrate.ts",
@@ -22,6 +22,7 @@
     "@types/react-dom": "19.0.0",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -30,7 +31,7 @@
     "drizzle-orm": "^0.31.4",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.400.0",
-    "next": "15.1.3",
+    "next": "15.2.1-canary.5",
     "next-auth": "5.0.0-beta.25",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
@@ -51,9 +52,12 @@
     "trailingComma": "none"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "husky": "^9.1.7",
+    "nock": "^14.0.1",
     "tsx": "^4.19.3"
   }
 }
