--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "migrate": "tsx lib/migrate.ts",
     "lint": "next lint",
     "test": "echo 'No tests yet'",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:migrate": "tsx scripts/run-migrations.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.5",
@@ -15,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@types/node": "20.17.6",
@@ -38,6 +40,7 @@
     "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
