--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@types/node": "20.17.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vercel/analytics": "^1.4.1",
@@ -35,12 +36,12 @@
     "lucide-react": "^0.400.0",
     "next": "15.3.0-canary.11",
     "next-auth": "5.0.0-beta.25",
+    "nodemailer": "^6.10.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "resend": "^4.1.2",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
