--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.400.0",
     "next": "15.3.0-canary.11",
     "next-auth": "5.0.0-beta.25",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
