--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "migrate": "tsx lib/migrate.ts",
     "lint": "next lint",
-    "test": "echo 'No tests yet'",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "prepare": "husky",
     "db:migrate": "tsx scripts/run-migrations.ts"
   },
@@ -24,6 +25,8 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vercel/analytics": "^1.4.1",
+    "ag-grid-community": "^33.2.4",
+    "ag-grid-react": "^33.2.4",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -34,7 +37,7 @@
     "drizzle-orm": "^0.31.4",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.400.0",
-    "next": "15.3.0-canary.11",
+    "next": "15.4.0-canary.31",
     "next-auth": "5.0.0-beta.25",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
@@ -57,11 +60,18 @@
     "trailingComma": "none"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.8.2",
     "nock": "^14.0.1",
     "tsx": "^4.19.3"
   }
