--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start",
     "migrate": "tsx lib/migrate.ts",
     "lint": "next lint",
-    "test": "echo 'No tests yet'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepare": "husky",
     "db:migrate": "tsx scripts/run-migrations.ts"
   },
@@ -57,11 +59,17 @@
     "trailingComma": "none"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "30.0.0-beta.3",
     "nock": "^14.0.1",
     "tsx": "^4.19.3"
   }
