--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
