document and fix reminder email env

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,15 @@ AUTH_SECRET= # https://generate-secret.vercel.app/32
 # https://authjs.dev/getting-started/providers/github
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
+
+# Base URL of your deployed application
+NEXT_PUBLIC_APP_URL=
+
+# SMTP configuration for sending reminder emails
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+
+# Secret key used to authorize Vercel Cron jobs
+CRON_SECRET_KEY=
