--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "drizzle-kit": "^0.22.8",
     "drizzle-orm": "^0.31.4",
     "drizzle-zod": "^0.5.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.400.0",
     "next": "15.3.0-canary.11",
     "next-auth": "5.0.0-beta.25",
