--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -17,13 +17,10 @@ jobs:
           cache: 'pnpm'
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v3
         with:
           version: 8
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm install
+          run_install: true
 
       - name: Setup environment
         run: cp .env.example .env
