--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -31,7 +31,7 @@ jobs:
         run: pnpm lint
 
       - name: Test
-        run: pnpm test --runInBand
+        run: pnpm test -- --runInBand
 
       - name: Build
         run: pnpm build
